# CardStock

./: BUILD.txt  CardStock.spec  CardStock_Designer_mac.spec  CardStock_Viewer_mac.spec  PythonEditor.py  README.md  __main__.py  allCodeWindow.py  analyzer.py  build.py  cardstock  cardstockFrameParts.py  codeRunnerThread.py  commands.py  consoleWindow.py  controlPanel.py  designer.py  draggableView.py  embeddedImages.py  entitlements.plist  errorListDialog.py  errorListWindow.py  findEngine.py  findEngineDesigner.py  findEngineViewer.py  generator.py  helpData.py  helpDialogs.py  killableThread.py  mediaSearchDialogs.py  mediaWebDialogs.py  page.py  pageWindow.py  pythonEditor.py  requirements.txt  resourcePathManager.py  runner.py  sanitizer.py  setup.cfg  stack.py  (+20 more)
cardstock/: CardStock_Designer_mac.spec  CardStock_Viewer_mac.spec  __init__.py  __main__.py  allCodeWindow.py  analyzer.py  appCommands.py  build.py  cardstockFrameParts.py  codeInspector.py  codeInspectorMulti.py  codeRunnerThread.py  consoleWindow.py  controlPanel.py  designer.py  easing.py  embeddedImages.py  errorListWindow.py  findEngineDesigner.py  findEngineViewer.py  flippedGCDC.py  generator.py  helpData.py  helpDataGen.py  helpDialogs.py  imageFactory.py  inspector.py  mediaSearchDialogs.py  migrations.py  propertyInspector.py  pythonEditor.py  resourcePathManager.py  runner.py  sanitizer.py  simpleListBox.py  stackExporter.py  stackManager.py  stackModel.py  standalone.py  tones.py  (+14 more)
examples/: Asteroids.cds  Browser.cds  Calculator.cds  Catch.cds  Diary.cds  Dice-stats.cds  Dice.cds  Factor.cds  Fifteen.cds  Flappy.cds  Graph.cds  Guess.cds  Hanoi.cds  Logo.cds  Magic.cds  Mastermind.cds  Maze.cds  Morph.cds  Navigation.cds  Number-puzzle.cds  Piano.cds  Pong.cds  Requests.cds  Scene.cds  Serial.cds  Snake.cds  Tanks.cds  Tetris.cds  TicTacToe.cds  Tutorial.cds  Welcome.cds  Wordel.cds  asteroids.cds  astroids.cds  browser.cds  calculator.cds  catch.cds  diary.cds  dice-stats.cds  dice.cds  (+22 more)
web-viewer/: cardstock.py  index.html  migrations.py  models.py  runner.py  sanitizer.py  server.py  settings.py  stackCanvas.py  (+6 more)
(+5 files in other folders)
