[metadata]
name = cardstock
version = 0.99.5
author = Ben Levitt
author_email = benjie@gmail.com
description = A simple development and rapid prototyping tool for quickly building multi-platform desktop programs and web apps.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/benjie-git/CardStock/wiki
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
install_requires =
    attrdict3
    wxpython
    PyInstaller
    requests
    simpleaudio

python_requires = >=3.7,<3.12

[options.extras_require]
mp3 =
    streamp3

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    cardstock = cardstock.designer:RunDesigner
    csviewer = cardstock.viewer:RunViewerApp


[options.package_data]
cardstock =
    examples/*
    CardStock_Designer_mac.spec
    CardStock_Viewer_mac.spec